Secure HintCardsApi and get cards by userId